apps/homeassistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant-https
spec:
  hostnames:
    - homeassistant.menia.cc
    - ha.menia.cc
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: shared-https
  rules:
    - backendRefs:
        - name: homeassistant
          port: 8123
